--- a/MyDailyPal/Base.lproj/Main.storyboard
+++ b/MyDailyPal/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MyDailyPal" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FirstTimeOpeningApp" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="MyDailyPal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -78,17 +78,18 @@ tapping PIN.</string>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="j9s-Tc-SvH" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="2Vq-F2-WVD"/>
-                            <constraint firstItem="j9s-Tc-SvH" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="9k6-bs-p5J"/>
-                            <constraint firstItem="j9s-Tc-SvH" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="EvJ-MN-RPZ"/>
-                            <constraint firstItem="j9s-Tc-SvH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fHt-uL-YcB"/>
+                            <constraint firstItem="j9s-Tc-SvH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="6Oe-Ld-v9h"/>
+                            <constraint firstItem="j9s-Tc-SvH" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="80W-j8-v4J"/>
+                            <constraint firstItem="j9s-Tc-SvH" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="U12-QO-yof"/>
+                            <constraint firstItem="j9s-Tc-SvH" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="qo5-7D-qAr"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="67Q-yy-bo5"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="32.799999999999997" y="32.833583208395808"/>
+            <point key="canvasLocation" x="372" y="32.833583208395808"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="9sq-aP-2VW">
@@ -112,31 +113,132 @@ tapping PIN.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="548-wJ-QmF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="942" y="298"/>
+            <point key="canvasLocation" x="1280.8" y="297.30134932533736"/>
         </scene>
-        <!--View Controller-->
+        <!--Title-->
         <scene sceneID="dgr-tl-aQA">
             <objects>
-                <viewController id="fyo-dY-ZAH" sceneMemberID="viewController">
+                <viewController id="fyo-dY-ZAH" customClass="Screen18ViewController" customModule="MyDailyPal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Sp9-gP-Vwd">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="This will be Screen 18" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sha-TM-wtC">
-                                <rect key="frame" x="55" y="133" width="166" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Create a Secure PIN " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iVV-ah-mo0">
+                                <rect key="frame" x="0.0" y="195" width="375" height="36"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <color key="textColor" red="0.45882352941176469" green="0.45490196078431372" blue="0.43529411764705883" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ux0-yw-vWc">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="148"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.0" green="0.69803921570000005" blue="0.85882352939999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="FoP-KF-0c2">
+                                <rect key="frame" x="50" y="267" width="264" height="60"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IA5-LJ-tyf">
+                                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="60" id="Ll5-o2-Qus"/>
+                                            <constraint firstAttribute="height" constant="60" id="wJZ-bt-dzC"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qeI-bS-GzR">
+                                        <rect key="frame" x="68" y="0.0" width="60" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="FbA-Y2-kWZ"/>
+                                            <constraint firstAttribute="width" constant="60" id="r96-GF-GRe"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7jB-vx-3qk">
+                                        <rect key="frame" x="136" y="0.0" width="60" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="HsN-sl-hwJ"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="Vhk-1v-4kX"/>
+                                            <constraint firstAttribute="width" constant="60" id="r3R-Iw-yde"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e3U-zB-kye">
+                                        <rect key="frame" x="204" y="0.0" width="60" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="HhB-yS-p1w"/>
+                                            <constraint firstAttribute="width" constant="60" id="SwH-GY-y7k"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.88627450980392153" green="0.8901960784313725" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="FoP-KF-0c2" firstAttribute="leading" secondItem="nSe-Eb-Js6" secondAttribute="leading" constant="50" id="Epg-ex-u4H"/>
+                            <constraint firstItem="nSe-Eb-Js6" firstAttribute="bottom" secondItem="iVV-ah-mo0" secondAttribute="bottom" constant="436" id="nTM-Al-kPs"/>
+                            <constraint firstItem="nSe-Eb-Js6" firstAttribute="trailing" secondItem="FoP-KF-0c2" secondAttribute="trailing" constant="50" id="q8d-1D-R3n"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="nSe-Eb-Js6"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="Hqz-2h-TT1"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dF0-78-Ch5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="944.79999999999995" y="-372.86356821589209"/>
+            <point key="canvasLocation" x="1284" y="-372.86356821589209"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="qRR-fm-V6C">
+            <objects>
+                <viewController id="Ciw-vD-vL3" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vjP-Ht-5vI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="D2Y-s4-qlU">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="148"/>
+                                <color key="backgroundColor" red="0.0" green="0.69803921570000005" blue="0.85882352939999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Confirm your PIN " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OQp-ge-RF6">
+                                <rect key="frame" x="0.0" y="195" width="375" height="36"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <color key="textColor" red="0.45882352939999999" green="0.4549019608" blue="0.43529411759999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.88627450980392153" green="0.8901960784313725" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="OQp-ge-RF6" firstAttribute="top" secondItem="D2Y-s4-qlU" secondAttribute="bottom" constant="39" id="Bhs-nk-MiQ"/>
+                            <constraint firstItem="uPS-7S-I67" firstAttribute="bottom" secondItem="OQp-ge-RF6" secondAttribute="bottom" constant="436" id="vTq-Ni-M1r"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="uPS-7S-I67"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xAK-pG-uOk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1903" y="-373"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="71E-jk-woD">
+            <objects>
+                <viewController id="xmi-LX-zId" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Cyi-4O-lIP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="lqE-2V-6TD"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f2A-UR-zay" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
     <resources>
